[package]
name = "data_structure"
version = "0.1.5"
edition = "2024"
description = "A Rust library for implementing and managing common data structures."
license = "MIT OR Apache-2.0"
authors = ["ElroyMorgan <your.email@example.com>"]
repository = "https://github.com/ElroyMorgan/data_structure"
documentation = "https://docs.rs/data_structure"
keywords = ["data-structures", "algorithms", "linked-list", "stack", "sorting"]
categories = ["algorithms", "data-structures"]
readme = "README.md"

[dependencies]
