[package]
name = "data_structure"
version = "0.1.14"
edition = "2024"
description = "A Rust library for implementing and managing common data structures."
license = "MIT OR Apache-2.0"
authors = ["ElroyMorgan <zx8467@outlook.com>"]
repository = "https://github.com/InfinityBloom/data_structure.git"
documentation = "https://docs.rs/data_structure"
keywords = ["data-structures", "algorithms", "linked-list", "stack", "sorting"]
categories = ["algorithms", "data-structures"]
readme = "README.md"

[dependencies]
